# Matrimony

./: .gitignore  README.md  pyproject.toml
Tutorials/: 1.Flow_of_Django.txt  10.Update_Model.txt  11.Display_Data.txt  12.Add_record_by_Form.txt  13.Delete_Record.txt  14.Updating Records.txt  2.Environemnt_setup.txt  3.Django_Create_App.txt  4.Django_Views.txt  5.Django_URLs.txt  6.Django_Templates.txt  7.Create_Model.txt  8.Insert_and_See_data.txt  9.Update_and_Delete.txt  How_to_run_app.txt  Link.txt
documentation/: documentation.html  superuser.txt
project/: db.sqlite3  test.html
project/app/: admin.py  models.py  urls.py  views.py
project/app/migrations/: 0001_initial.py  0002_user_password.py  0003_contact_info.py  0004_prposals.py  0005_image.py  0006_user_img.py  0007_iitial_info_img.py
project/app/templates/: admin_dashboard.html  desired_info.html  educational_info.html  family_info.html  index.html  initial_info.html  professional_info.html  propose.html  public_page.html  see_details - Copy.html  see_details.html  show_contact_infor.html  test.html  user_login.html  user_profile.html
project/project/: settings.py  urls.py
